deployment/kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-listings
  namespace: ai-listings
spec:
  selector:
    app: ai-listings
  ports:
    - port: 3000
      targetPort: 3000
